--- a/Login/pom.xml
+++ b/Login/pom.xml
@@ -26,10 +26,6 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
@@ -71,11 +67,6 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>com.clouddrive</groupId>
             <artifactId>Model</artifactId>
             <version>0.0.1-SNAPSHOT</version>
@@ -111,7 +102,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>2.3.7.RELEASE</version>
                 <configuration>
-                    <mainClass>com.clouddrive.login.SecurityApplication</mainClass>
+                    <mainClass>com.clouddrive.login.LoginApplication</mainClass>
                 </configuration>
                 <executions>
                     <execution>
