--- a/Main/pom.xml
+++ b/Main/pom.xml
@@ -77,7 +77,7 @@
         </dependency>
         <dependency>
             <groupId>com.clouddrive</groupId>
-            <artifactId>Model</artifactId>
+            <artifactId>Util</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
