文件中心上传功能（未测试

--- a/File/src/main/resources/application.properties
+++ b/File/src/main/resources/application.properties
@@ -4,3 +4,11 @@ spring.application.name=File
 server.port=8080
 
 rocketmq.name-server=127.0.0.1:9876
+rocketmq.producer.group=testGroup
+rocketmq.producer.send-message-timeout=10000
+
+spring.redis.host=localhost
+spring.redis.port=6379
+
+CloudDrive.SavePath=E:\\file
+CloudDrive.BufferPath=E:\\buffer
