主程序上传功能（未测试

--- a/File/src/main/resources/application.properties
+++ b/File/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=File
 # 应用服务 WEB 访问端口
 server.port=8080
 
-rocketmq.name-server=127.0.0.1:9876
-rocketmq.producer.group=testGroup
+rocketmq.name-server=172.17.0.1:9876
+rocketmq.producer.group=cloudDriveFileCore
 rocketmq.producer.send-message-timeout=10000
 
 spring.redis.host=localhost
