--- a/Login/src/main/resources/application.properties
+++ b/Login/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=5616
 # 数据库驱动：
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # 数据库连接地址
-spring.datasource.url=jdbc:mysql://localhost:3306/clouddrive
+spring.datasource.url=jdbc:mysql://172.17.0.1:3306/clouddrive
 # 数据库用户名&密码：
-spring.datasource.username=root
+spring.datasource.username=cloudDriveUser
 spring.datasource.password=123456
 
 spring.redis.host=localhost
