--- a/Main/pom.xml
+++ b/Main/pom.xml
@@ -76,6 +76,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-spring-boot-starter</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+        <dependency>
             <groupId>com.clouddrive</groupId>
             <artifactId>Util</artifactId>
             <version>0.0.1-SNAPSHOT</version>
