--- a/Main/src/main/resources/application.properties
+++ b/Main/src/main/resources/application.properties
@@ -1,15 +1,12 @@
-# 应用名称
 spring.application.name=Main
-# 数据库驱动：
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-# 数据源名称
 spring.datasource.name=defaultDataSource
-# 数据库连接地址
-spring.datasource.url=jdbc:mysql://localhost:3306/blue?serverTimezone=UTC
-# 数据库用户名&密码：
-spring.datasource.username=***
-spring.datasource.password=***
-# 应用服务 WEB 访问端口
+spring.datasource.url=jdbc:mysql://172.17.0.1:3306/clouddrive
+spring.datasource.username=cloudDriveUser
+spring.datasource.password=123456
 server.port=8080
 
+rocketmq.name-server=172.17.0.1:9876
+rocketmq.producer.group=cloudDriveMain
+rocketmq.producer.send-message-timeout=10000
 
