--- a/Modules/pom.xml
+++ b/Modules/pom.xml
@@ -12,7 +12,6 @@
     <modules>
         <module>Main</module>
         <module>File</module>
-        <module>Login</module>
     </modules>
     <packaging>pom</packaging>
     <artifactId>Modules</artifactId>
@@ -25,6 +24,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
         <dependency>
