将主界面模块更新为微服务，修复一些鉴权的bug，更改重定向逻辑，将部分的重定向交给前端处理

--- a/Common/pom.xml
+++ b/Common/pom.xml
@@ -14,6 +14,7 @@
         <module>Core</module>
         <module>Redis</module>
         <module>FileCore</module>
+        <module>RocketMQ</module>
     </modules>
     <artifactId>Common</artifactId>
     <packaging>pom</packaging>
