--- a/Modules/Main/src/main/resources/application.properties
+++ b/Modules/Main/src/main/resources/application.properties
@@ -1,12 +1,14 @@
-spring.application.name=Main
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.name=defaultDataSource
 spring.datasource.url=jdbc:mysql://172.17.0.1:3306/clouddrive
 spring.datasource.username=cloudDriveUser
 spring.datasource.password=123456
-server.port=8080
+server.port=5617
 
 rocketmq.name-server=172.17.0.1:9876
 rocketmq.producer.group=cloudDriveMain
 rocketmq.producer.send-message-timeout=10000
 
+spring.application.name=appMain
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+management.endpoints.web.exposure.include=*
