--- a/Modules/pom.xml
+++ b/Modules/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>Main</module>
         <module>File</module>
+        <module>IDServer</module>
     </modules>
     <packaging>pom</packaging>
     <artifactId>Modules</artifactId>
@@ -25,6 +26,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-loadbalancer</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
