--- a/Modules/File/pom.xml
+++ b/Modules/File/pom.xml
@@ -8,6 +8,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>com.clouddrive.modules</groupId>
     <artifactId>File</artifactId>
 
     <dependencies>
@@ -26,6 +27,10 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
 
         <dependency>
@@ -53,6 +58,11 @@
             <artifactId>RocketMQ</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.clouddrive.common</groupId>
+            <artifactId>ID</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -70,9 +80,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.3.7.RELEASE</version>
+                <version>2.7.5</version>
                 <configuration>
-                    <mainClass>com.clouddrive.file.FileApplication</mainClass>
+                    <mainClass>com.clouddrive.modules.file.FileApplication</mainClass>
                 </configuration>
                 <executions>
                     <execution>
