建立文件服务转发策略

--- a/GateWay/pom.xml
+++ b/GateWay/pom.xml
@@ -50,6 +50,11 @@
 
         <dependency>
             <groupId>com.clouddrive.common</groupId>
+            <artifactId>ID</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.clouddrive.common</groupId>
             <artifactId>core</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <exclusions>
