--- a/GateWay/src/main/resources/application.yml
+++ b/GateWay/src/main/resources/application.yml
@@ -2,10 +2,19 @@ spring:
   application:
     name: gateway
   cloud:
+    loadbalancer:
+      nacos:
+        enabled: true
+      cache:
+        enabled: false
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
     gateway:
+      discovery:
+        locator:
+          enabled: true
+          lower-case-service-id: true
       routes:
         - id: login_route
           uri: lb://auth
@@ -24,6 +33,14 @@ spring:
           filters:
             - StripPrefix=2
             - RewriteLocationResponseHeader=AS_IN_REQUEST, Location, localhost:8080,
+
+        - id: id_route
+          uri: fs://IDServer
+          order: 1
+          predicates:
+            - Path=/id/**
+          filters:
+            - StripPrefix=1
 
         - id: root_route
           uri: http://localhost:4173/
