--- a/Modules/File/pom.xml
+++ b/Modules/File/pom.xml
@@ -63,6 +63,11 @@
             <artifactId>ID</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.clouddrive.common</groupId>
+            <artifactId>MetaData</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
