--- a/Modules/File/src/main/resources/application.yml
+++ b/Modules/File/src/main/resources/application.yml
@@ -4,6 +4,10 @@ spring:
   redis:
     port: 6379
     host: localhost
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
 
 server:
   port: 5615
@@ -15,5 +19,5 @@ rocketmq:
     send-message-timeout: 10000
 
 clouddrive:
-  save-path: E:\\file
-  buffer-path: E:\\buffer
+  save-path: E:\file
+  buffer-path: E:\buffer
