--- a/Modules/Main/pom.xml
+++ b/Modules/Main/pom.xml
@@ -8,12 +8,17 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>com.clouddrive.modules</groupId>
     <artifactId>Main</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
