--- a/Common/RabbitMQ/pom.xml
+++ b/Common/RabbitMQ/pom.xml
@@ -10,13 +10,16 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.clouddrive.common</groupId>
-    <artifactId>RocketMQ</artifactId>
+    <artifactId>RabbitMQ</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>org.apache.rocketmq</groupId>
-            <artifactId>rocketmq-spring-boot-starter</artifactId>
-            <version>2.2.2</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-json</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
     </dependencies>
 
