添加发送邮箱模块

--- a/Auth/pom.xml
+++ b/Auth/pom.xml
@@ -67,10 +67,13 @@
             <artifactId>redis</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
-    </dependencies>
 
-    <dependencyManagement>
-    </dependencyManagement>
+        <dependency>
+            <groupId>com.clouddrive.common</groupId>
+            <artifactId>Mail</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
