--- a/Auth/src/main/resources/application.properties
+++ b/Auth/src/main/resources/application.properties
@@ -15,3 +15,9 @@ spring.redis.client-type=lettuce
 spring.application.name=auth
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 management.endpoints.web.exposure.include=*
+
+spring.mail.host=smtp.qq.com
+spring.mail.port=465
+spring.mail.username=XXXXX
+spring.mail.protocol=XXXXX
+spring.mail.properties.mail.smtp.ssl.enable=true
