注册的邮箱验证&拆分WorkIDConstants

--- a/Auth/pom.xml
+++ b/Auth/pom.xml
@@ -73,6 +73,18 @@
             <artifactId>Mail</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.clouddrive.common</groupId>
+            <artifactId>ID</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.clouddrive.common</groupId>
+            <artifactId>FileCore</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
