--- a/Auth/src/main/resources/application.properties
+++ b/Auth/src/main/resources/application.properties
@@ -19,5 +19,5 @@ management.endpoints.web.exposure.include=*
 spring.mail.host=smtp.qq.com
 spring.mail.port=465
 spring.mail.username=XXXXX
-spring.mail.protocol=XXXXX
+spring.mail.password=XXXXX
 spring.mail.properties.mail.smtp.ssl.enable=true
