--- a/Common/ID/pom.xml
+++ b/Common/ID/pom.xml
@@ -18,6 +18,10 @@
             <artifactId>Feign</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-loadbalancer</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
