--- a/Modules/File/src/main/resources/application.yml
+++ b/Modules/File/src/main/resources/application.yml
@@ -13,6 +13,10 @@ spring:
     port: 5672
     username: guest
     password: guest
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 11MB
 
 server:
   port: 5615
